[gd_scene load_steps=3 format=3 uid="uid://qk8x2wvdqp7i"]

[ext_resource type="PackedScene" uid="uid://b0dwb73yoj3sr" path="res://level_elements/keys/key.tscn" id="1_2kdyu"]
[ext_resource type="Script" path="res://editor/key_editor.gd" id="1_a031y"]

[node name="KeyEditor" type="MarginContainer"]
offset_right = 269.0
offset_bottom = 592.0
script = ExtResource("1_a031y")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopStuff" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="KeyEdit" type="Label" parent="VBoxContainer/TopStuff"]
layout_mode = 2
text = "Key Editor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TheKey" type="CenterContainer" parent="VBoxContainer/TopStuff"]
layout_mode = 2

[node name="KeyHolder" type="Control" parent="VBoxContainer/TopStuff/TheKey"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="key" parent="VBoxContainer/TopStuff/TheKey/KeyHolder" instance=ExtResource("1_2kdyu")]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0
in_keypad = true
ignore_position = true

[node name="SpacingForKeyCount" type="Control" parent="VBoxContainer/TopStuff"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Editors" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BaseDoor" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Editors"]
layout_mode = 2

[node name="Color" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor/Color"]
layout_mode = 2
text = "Color:"

[node name="ColorChoice" type="OptionButton" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor/Color"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 14
selected = 0
popup/item_0/text = "White"
popup/item_0/id = 1
popup/item_1/text = "Black"
popup/item_1/id = 2
popup/item_2/text = "Orange"
popup/item_2/id = 3
popup/item_3/text = "Purple"
popup/item_3/id = 4
popup/item_4/text = "Cyan"
popup/item_4/id = 5
popup/item_5/text = "Pink"
popup/item_5/id = 6
popup/item_6/text = "Red"
popup/item_6/id = 7
popup/item_7/text = "Green"
popup/item_7/id = 8
popup/item_8/text = "Blue"
popup/item_8/id = 9
popup/item_9/text = "Brown"
popup/item_9/id = 10
popup/item_10/text = "Master"
popup/item_10/id = 11
popup/item_11/text = "Glitch"
popup/item_11/id = 13
popup/item_12/text = "Pure"
popup/item_12/id = 12
popup/item_13/text = "Stone"
popup/item_13/id = 14

[node name="Type" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor/Type"]
layout_mode = 2
text = "Type:"

[node name="TypeChoice" type="OptionButton" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor/Type"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 7
selected = 1
popup/item_0/text = "Add"
popup/item_0/id = 0
popup/item_1/text = "Exact"
popup/item_1/id = 1
popup/item_2/text = "Star"
popup/item_2/id = 2
popup/item_3/text = "Unstar"
popup/item_3/id = 3
popup/item_4/text = "Flip"
popup/item_4/id = 4
popup/item_5/text = "Rotor"
popup/item_5/id = 5
popup/item_6/text = "Rotor Flip"
popup/item_6/id = 6

[node name="Amount" type="MarginContainer" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor/Amount"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor/Amount/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Amount:"

[node name="RealAmount" type="SpinBox" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor/Amount/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
min_value = -1e+06
max_value = 1e+06
value = 1.0
allow_greater = true
allow_lesser = true

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor/Amount/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "+"

[node name="ImaginaryAmount" type="SpinBox" parent="VBoxContainer/ScrollContainer/Editors/BaseDoor/Amount/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
min_value = -1e+06
max_value = 1e+06
allow_greater = true
allow_lesser = true
suffix = "i"
